# multi-platform-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/k8s/: deployment.yaml
services/api/: __init__.py
services/telegram_bot/: __init__.py
services/worker/: __init__.py
