[project]
name = "trading-platform"
version = "0.1.0"
description = "Multi-Platform Trading Bot - Binance (Crypto) & Exness (Forex)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Trading Bot Team" }]
keywords = ["trading", "crypto", "forex", "binance", "exness", "ai"]

dependencies = [
    # Core
    "msgspec>=0.18.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # Logging
    "structlog>=24.1.0",
    
    # Async
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    
    # Exchange connectors
    "python-binance>=1.0.19",
    "ccxt>=4.2.0",
    
    # AI providers
    "google-generativeai>=0.5.0",
    "openai>=1.30.0",
    "groq>=0.5.0",
    
    # Telegram
    "aiogram>=3.5.0",
    
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    
    # Retry/Circuit breaker
    "tenacity>=8.3.0",
    
    # Metrics
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

# Ruff - Fast Python linter
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["packages"]

# MyPy - Static type checker
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Pytest
[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "slow: Slow tests",
]

# Coverage
[tool.coverage.run]
source = ["packages"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

# Bandit - Security linter
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used
